# CognitoEDA

./: .gitignore  .rcfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: create_release.yml  testing_release.yml  validate_pylint.yml
bkp_src_v1/utils/: agents.py  schema.py
data/: metadata.txt
logs/12a7fa23-b1f6-49d4-8ffd-abbfc0bd6b65/: config.json  index.html
logs/35f41569-26b6-48b5-a77c-460bb4ca1c08/: config.json
logs/6f1f349a-817c-4e2a-a82a-332dafad6806/: index.html
logs/9049caed-2c0d-41ee-b75d-6a6f2f0adeca/: index.html
logs/9379a172-77ce-4a5e-978e-c78d56ead68b/: config.json  index.html
logs/af82fc1c-4416-4442-af49-8712b65da935/: index.html
logs/b69a8ee8-312c-46f8-9464-38311f5dd2ae/: index.html
logs/e9c71c2b-fbc2-46b1-b59f-88d30303bbfd/: config.json
logs/eaeabe21-e7dd-429c-ac29-9ad0cbdd1d5d/: index.html
logs/ee161de6-af32-414d-bcca-7869c92288db/: config.json
logs/f3b7511c-7013-43bc-8205-6c4d8ce687c5/: config.json  index.html
src/: app.py  graph.py  graph_v1.py
src/page_section/: agent_page.py  history_page.py  intro_page.py
src/pages/: agent_page.py  history_page.py  introduction_page.py
src/tools/: agents.py  helper.py  prompt.py  schema.py  support_tools.py  tools.py
src/utils/: agents.py  helper.py  prompt.py  schema.py  tools.py
src_v1/: graph.py
src_v1/utils/: helper.py
src_v2/: graph.py
src_v2/utils/: agents.py  helper.py  prompt.py
